fixed small space on the right corner, less space between section on small screen

--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -1,16 +1,14 @@
 .info {
   display: flex;
   justify-content: space-between;
+  margin: 160px 0;
 
   &__heading {
     width: 314px;
-  
     text-transform: uppercase;
     font-weight: 300;
     font-size: 48px;
     line-height: 60px;
-    margin: 0;
-
   }
 
   &__text {
@@ -31,10 +29,11 @@
 @media (max-width: 1250px) {
   .info {
     flex-direction: column;
-    margin-left: 10px;
+    margin: 0 10px;
 
     &__heading {
       padding-bottom: 20px;
+      width: 100%;
     }
     
     &__text {
