--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -4,7 +4,7 @@
   list-style-type: none;
 
   position: relative;
-  top: 620px;
+  top: 717px;
 }
 
 .nav__link {
