--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -21,3 +21,9 @@
     margin: auto;
   }
 }
+
+@media (max-width: 1250px) {
+  .section {
+    padding-bottom: 20px;
+  }
+}
