--- a/src/styles/testimonials.scss
+++ b/src/styles/testimonials.scss
@@ -5,8 +5,11 @@
   justify-content: center;
   
   margin-top: 30px;
+}
 
-  @media (max-width: 1250px) {
+@media (max-width: 1250px) {
+  .testimonials {
     grid-template-columns: 50%;
+    grid-gap: 50px;
   }
 }
